# TheSewerlands

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  README.md  justfile
data/: sewerlands.icns
imgsrc/: chestroom.xcf  icon.xcf  unknown.xcf
src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  object.cpp  object.hpp  resource-path.mm  room.cpp  room.hpp  sprite.cpp  sprite.hpp  vec2.hpp
src/mac/: resource-path.hpp
